# zkSnake

./: .gitignore  .gitmodules  README.md  ZkSnakeTemp.json
.github/workflows/: test.yml
contracts/: ZkSnake.sol  ZkSnakeTemp.sol
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/assets/: contract.js  food.js  zksnake_abi.ts
frontend/src/components/: Gallery.jsx  Game.jsx  LandingHero.jsx  Leaderboard.jsx  MintNFT.jsx  MyNFTs.jsx  NFTCard.jsx  NavBar.jsx  SiteDropdown.jsx  VideoGame.jsx
frontend/src/styles/: navbar.css
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
relay/src/: main.rs
script/: Deploy.s.sol  DeployTemp.s.sol
tests/: ZkSnake.t.sol
