[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snake"
path = "src/bin/snake.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }


[profile.release]
lto = true
opt-level = 3

[workspace]
